# CppUniversityTest

./: CMakeLists.txt  README.md
include/: chlodnia.h  cysterna.h  kryty.h  ladunek.h  odkryty.h  platforma.h  pociag.h  wagon.h
src/: chlodnia.cpp  cysterna.cpp  kryty.cpp  ladunek.cpp  main.cpp  odkryty.cpp  platforma.cpp  pociag.cpp  wagon.cpp
